[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
domain.path = "crates/domain"

anyhow = "1.0.102"
clap = "4.6.1"
clap_complete = "4.6.5"
dotenvy = "0.15.7"
pretty_assertions = "1.4.1"
reqwest = "0.13.4"
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = "0.9.0"
tokio = "1.52.3"

[profile.dev.package.sqlx-macros]
opt-level = 3
