[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.103"
clap = "4.6.1"
clap_complete = "4.6.5"
csv = "1.4.0"
domain.path = "crates/domain"
dotenvy = "0.15.7"
nwr-delay-attribution-ingest.path = "crates/nwr-delay-attribution-ingest"
pretty_assertions = "1.4.1"
reqwest = "0.13.4"
serde = "1.0.228"
serde-aux = "4.7.0"
serde_json = "1.0.150"
sqlx = "0.9.0"
tokio = "1.52.3"
trait-variant = "0.1.2"

[profile.dev.package.sqlx-macros]
opt-level = 3
