[package]
name = "datastore"
version = "0.1.0"
edition = "2024"

[dependencies]
domain = { workspace = true, features = ["sqlx"] }

anyhow.workspace = true
dotenvy.workspace = true
sqlx = { workspace = true, features = ["macros", "migrate", "runtime-tokio", "sqlite"] }
trait-variant.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
tokio = { workspace = true, features = ["macros"] }
